# ai_grocery_app

./: README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  cart.py  external_products.py  orders.py  products.py
backend/app/core/: config.py  security.py
backend/app/crud/: cart.py  order.py  product.py  user.py
backend/app/db/: session.py
backend/app/models/: cart.py  order.py  product.py  user.py
backend/app/schemas/: cart.py  order.py  product.py  user.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: constants.dart
lib/controllers/: auth_controller.dart  cart_controller.dart  order_controller.dart  product_controller.dart  wishlist_controller.dart
lib/datafile/: data.json
lib/models/: cart.dart  order.dart  product.dart  user.dart
lib/services/: auth_service.dart  cart_service.dart  order_service.dart  product_service.dart
lib/utils/: storage.dart
lib/views/auth/: login_page.dart  register_page.dart
lib/views/cart/: cart_page.dart
lib/views/home/: Find_product.dart  home_page.dart  product_detail_page.dart  wishlist_page.dart
lib/widgets/: banner_carousel.dart  bottom_nav.dart  product_card.dart  product_row.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
